--- a/src/app/Auth/membresia/membresia.component.html
+++ b/src/app/Auth/membresia/membresia.component.html
@@ -6,10 +6,10 @@
     </a>
 
     <nav class="hidden md:flex space-x-8 text-white text-base font-bold uppercase tracking-wide relative z-50">
-      <a routerLink="/inicio" class="hover:text-yellow-400 cursor-pointer transition-colors">Inicio</a>
-      <a routerLink="/servicios" class="hover:text-yellow-400 cursor-pointer transition-colors">Servicios</a>
-      <a routerLink="/membresia" class="hover:text-yellow-400 cursor-pointer transition-colors">Planes</a>
-      <a routerLink="/contacto" class="hover:text-yellow-400 cursor-pointer transition-colors">Contacto</a>
+      <a href="/inicio" class="hover:text-yellow-400 cursor-pointer transition-colors">Inicio</a>
+      <a href="/servicios" class="hover:text-yellow-400 cursor-pointer transition-colors">Servicios</a>
+      <a href="/membresia" class="hover:text-yellow-400 cursor-pointer transition-colors">Planes</a>
+      <a href="/contacto" class="hover:text-yellow-400 cursor-pointer transition-colors">Contacto</a>
     </nav>
 
     <button (click)="goToLogin()" class="bg-yellow-500 hover:bg-yellow-600 text-black px-5 py-2 rounded-lg text-lg font-semibold">
