--- a/src/app/Auth/servicios/servicios.component.html
+++ b/src/app/Auth/servicios/servicios.component.html
@@ -7,10 +7,10 @@
 
     <!-- Links -->
     <nav class="hidden md:flex space-x-8 text-white text-base font-bold uppercase tracking-wide relative z-50">
-      <a routerLink="/inicio" class="hover:text-orange-400 cursor-pointer transition-colors">Inicio</a>
-      <a routerLink="/servicios" class="hover:text-orange-400 cursor-pointer transition-colors">Servicios</a>
-      <a routerLink="/membresia" class="hover:text-orange-400 cursor-pointer transition-colors">Planes</a>
-      <a routerLink="/contacto" class="hover:text-orange-400 cursor-pointer transition-colors">Contacto</a>
+      <a href="/inicio" class="hover:text-orange-400 cursor-pointer transition-colors">Inicio</a>
+      <a href="/servicios" class="hover:text-orange-400 cursor-pointer transition-colors">Servicios</a>
+      <a href="/membresia" class="hover:text-orange-400 cursor-pointer transition-colors">Planes</a>
+      <a href="/contacto" class="hover:text-orange-400 cursor-pointer transition-colors">Contacto</a>
     </nav>
 
 
